# curso-django

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
contrib/: env-sample
pypro/: settings.py  urls.py
pypro/core/: urls.py
pypro/core/templates/: index.html
pypro/core/tests/: tests_app.py  tests_home.py
