[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = "A project to study how to make a Django Appication"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.1.7"
python-decouple = "^3.4"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
