[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = "A project to study how to make a Django Appication"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.1.7"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-django = "^4.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pypro.settings"
python_files = [
    "test*.py",
     "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "pypro/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
